Fixed z-index of nav bar

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ header {
   width: 100%;
   height: 40px;
   background-color: rgb(92, 88, 88);
+  z-index: 1000;
 }
 
 .search {
